--- a/CoreDemo/Views/Blog/Index.cshtml
+++ b/CoreDemo/Views/Blog/Index.cshtml
@@ -17,7 +17,7 @@
 
 
                     <div class="col-lg-4 card">
-                        <a href="single.html">
+                        <a href="/Blog/BlogReadAll/@item.BlogID/">
                             <img src="@item.BlogImage" class="card-img-top img-fluid" alt="">
                         </a>
                         <div class="card-body">
@@ -42,10 +42,10 @@
 
                             </ul>
                             <h5 class="card-title">
-                                <a href="single.html">@item.BlogTitle</a>
+                                <a href="/Blog/BlogReadAll/@item.BlogID/">@item.BlogTitle</a>
                             </h5>
                             <p class="card-text mb-3">@item.BlogContent.Substring(0,item.BlogContent.Substring(0,95).LastIndexOf(" "))...</p>
-                            <a href="/CoreBlogTema/BlogDetails/@item.BlogID/" class="btn btn-primary read-m">Devamını Oku</a>
+                            <a href="/Blog/BlogReadAll/@item.BlogID/" class="btn btn-primary read-m">Devamını Oku</a>
                         </div>
                     </div>
                     }
