--- a/CoreDemo/Views/Register/Index.cshtml
+++ b/CoreDemo/Views/Register/Index.cshtml
@@ -4,12 +4,14 @@
     Layout = "~/Views/Shared/UserLayout.cshtml";
 }
 
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+<script src="~/lib/jquery/dist/jquery.js"></script>
 <section class="main-content-w3layouts-agileits">
     <div class="container">
         <h3 class="tittle">Yazar Kayıt Sayfası</h3>
         <div class="inner-sec">
             <div class="login p-5 bg-light mx-auto mw-100">
-                <form action="#" method="post">
+                <form method="post">
                     <div class="form-row">
                         <div class="col-md-6 mb-3">
                             <label for="validationCustom01">Adınız soyadınız</label>
@@ -28,17 +30,21 @@
                         </div>
                         <div class="form-group col-md-6">
                             <label for="exampleInputPassword2 mb-2">Görsel Dosya Yolu</label>
-                            <input type="password" class="form-control" name="WriterImage"placeholder="" required="">
+                            <input type="text" class="form-control" name="WriterImage" placeholder="" required="">
                         </div>
 
                     </div>
                     <button type="submit" class="btn btn-primary submit mb-4">Kayıt Ol</button>
                     <p>
-                        <a href="#">Tüm şartları okudum, kabul ediyorum.</a>
+                        <a href="#" id="btn1">Tüm şartları okudum, kabul ediyorum.</a>
                     </p>
                 </form>
 
             </div>
         </div>
     </div>
+    <br />
+    <script>$('#btn1').click(function () {
+            swa1("Sitemizde verdiğiniz mail adresi üzerinden bilgi ve haber e-postaları spam ölçüsüne varmadan gönderilmeye devam edecektir. Eüer e-posta bülteninden çıkmak isterseniz mail ileti dizisini durdurabilirsiniz, şifre ve mail adresleriniz şifrelenmiş formatta hernagi bir kullanıcının göremeyecği şekilde veritabamlarında saklanmkatadır.");
+        });</script>
 </section>
