--- a/CoreDemo/Views/Register/Index.cshtml
+++ b/CoreDemo/Views/Register/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model EntityLayer.Concrete.Writer
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/UserLayout.cshtml";
@@ -11,26 +11,30 @@
         <h3 class="tittle">Yazar Kayıt Sayfası</h3>
         <div class="inner-sec">
             <div class="login p-5 bg-light mx-auto mw-100">
-                <form method="post">
+               @using (Html.BeginForm("Index", "Register", FormMethod.Post)) { 
                     <div class="form-row">
                         <div class="col-md-6 mb-3">
                             <label for="validationCustom01">Adınız soyadınız</label>
-
-                            <input type="text" class="form-control" id="validationDefault01" name="WriterName" placeholder="" required="">
+                            @Html.TextBoxFor(x=>x.WriterName)
+                            @Html.ValidationMessageFor(x=>x.WriterName)
+                            @*@<input type="text" class="form-control" id="validationDefault01" name="WriterName" placeholder="" required="">*@
                         </div>
                         <div class="col-md-6 mb-3">
                             <label for="validationCustom02">Mail Adresi</label>
-                            <input type="email" class="form-control" id="validationDefault02" name="WriterMail" placeholder="" required="">
+                            @Html.TextBoxFor(x => x.WriterMail)
+                            @Html.ValidationMessageFor(x => x.WriterMail)
                         </div>
                     </div>
                     <div class="form-row">
                         <div class="form-group col-md-6">
                             <label for="exampleInputPassword1 mb-2">Şifre</label>
-                            <input type="password" class="form-control" id="Password" placeholder="" required="">
+                            @Html.TextBoxFor(x => x.WriterPassword)
+                            @Html.ValidationMessageFor(x => x.WriterPassword)
                         </div>
                         <div class="form-group col-md-6">
                             <label for="exampleInputPassword2 mb-2">Görsel Dosya Yolu</label>
-                            <input type="text" class="form-control" name="WriterImage" placeholder="" required="">
+                            @Html.TextBoxFor(x => x.WriterImage)
+                            @Html.ValidationMessageFor(x => x.WriterImage)
                         </div>
 
                     </div>
@@ -38,13 +42,16 @@
                     <p>
                         <a href="#" id="btn1">Tüm şartları okudum, kabul ediyorum.</a>
                     </p>
-                </form>
-
+                    }
+                
             </div>
         </div>
     </div>
     <br />
     <script>$('#btn1').click(function () {
-            swa1("Sitemizde verdiğiniz mail adresi üzerinden bilgi ve haber e-postaları spam ölçüsüne varmadan gönderilmeye devam edecektir. Eüer e-posta bülteninden çıkmak isterseniz mail ileti dizisini durdurabilirsiniz, şifre ve mail adresleriniz şifrelenmiş formatta hernagi bir kullanıcının göremeyecği şekilde veritabamlarında saklanmkatadır.");
+    swa1("Sitemizde verdiğiniz mail adresi üzerinden bilgi ve haber e-postaları spam ölçüsüne n\
+    varmadan gönderilmeye devam edecektir. Eüer e-posta bülteninden çıkmak isterseniz mail iletin\
+    dizisini durdurabilirsiniz, şifre ve mail adresleriniz şifrelenmiş formatta hernagi bir\
+    kullanıcının göremeyecği şekilde veritabamlarında saklanmkatadır.");
         });</script>
 </section>
