--- a/CoreDemo/Views/Register/Index.cshtml
+++ b/CoreDemo/Views/Register/Index.cshtml
@@ -15,26 +15,26 @@
                     <div class="form-row">
                         <div class="col-md-6 mb-3">
                             <label for="validationCustom01">Adınız soyadınız</label>
-                            @Html.TextBoxFor(x=>x.WriterName)
-                            @Html.ValidationMessageFor(x=>x.WriterName)
+                            @Html.TextBoxFor(x=>x.WriterName, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(x=>x.WriterName,"", new {@class="text-danger"})
                             @*@<input type="text" class="form-control" id="validationDefault01" name="WriterName" placeholder="" required="">*@
                         </div>
                         <div class="col-md-6 mb-3">
                             <label for="validationCustom02">Mail Adresi</label>
-                            @Html.TextBoxFor(x => x.WriterMail)
-                            @Html.ValidationMessageFor(x => x.WriterMail)
+                            @Html.TextBoxFor(x => x.WriterMail, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(x => x.WriterMail, "", new { @class = "text-danger" })
                         </div>
                     </div>
                     <div class="form-row">
                         <div class="form-group col-md-6">
                             <label for="exampleInputPassword1 mb-2">Şifre</label>
-                            @Html.TextBoxFor(x => x.WriterPassword)
-                            @Html.ValidationMessageFor(x => x.WriterPassword)
+                            @Html.TextBoxFor(x => x.WriterPassword, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(x => x.WriterPassword, "", new { @class = "text-danger" })
                         </div>
                         <div class="form-group col-md-6">
                             <label for="exampleInputPassword2 mb-2">Görsel Dosya Yolu</label>
-                            @Html.TextBoxFor(x => x.WriterImage)
-                            @Html.ValidationMessageFor(x => x.WriterImage)
+                            @Html.TextBoxFor(x => x.WriterImage, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(x => x.WriterImage, "", new { @class = "text-danger" })
                         </div>
 
                     </div>
@@ -49,7 +49,7 @@
     </div>
     <br />
     <script>$('#btn1').click(function () {
-    swa1("Sitemizde verdiğiniz mail adresi üzerinden bilgi ve haber e-postaları spam ölçüsüne n\
+    swa1("Site Kabul Şartları","Sitemizde verdiğiniz mail adresi üzerinden bilgi ve haber e-postaları spam ölçüsüne n\
     varmadan gönderilmeye devam edecektir. Eüer e-posta bülteninden çıkmak isterseniz mail iletin\
     dizisini durdurabilirsiniz, şifre ve mail adresleriniz şifrelenmiş formatta hernagi bir\
     kullanıcının göremeyecği şekilde veritabamlarında saklanmkatadır.");
