--- a/CoreDemo/Views/Blog/BlogReadAll.cshtml
+++ b/CoreDemo/Views/Blog/BlogReadAll.cshtml
@@ -33,7 +33,7 @@
                                 <ul>
                                     <li>
                                         <a href="#">
-                                            <i class="far fa-calendar-alt"></i> FEB 15,2018
+                                            <i class="far fa-calendar-alt"></i> @(((DateTime) item.BlogCreateDate).ToString("dd-MMMM-yyyy"))
                                         </a>
                                     </li>
                                     <li class="mx-2">
@@ -83,48 +83,8 @@
 
                         </div>
                         @await Component.InvokeAsync("CategoryList")
+                        @await Component.InvokeAsync("WriterLastBlog")
 
-                        <div class="tech-btm">
-                            <h4>Yazarın Diğer Yazıları</h4>
-
-                            <div class="blog-grids row mb-3">
-                                <div class="col-md-5 blog-grid-left">
-                                    <a href="single.html">
-                                        <img src="~~/CoreBlogTema/images/1.jpg" class="img-fluid" alt="">
-                                    </a>
-                                </div>
-                                <div class="col-md-7 blog-grid-right">
-
-                                    <h5>
-                                        <a href="single.html">Pellentesque dui, non felis. Maecenas male non felis </a>
-                                    </h5>
-                                    <div class="sub-meta">
-                                        <span>
-                                            <i class="far fa-clock"></i> 20 Jan, 2018
-                                        </span>
-                                    </div>
-                                </div>
-
-                            </div>
-                            <div class="blog-grids row mb-3">
-                                <div class="col-md-5 blog-grid-left">
-                                    <a href="single.html">
-                                        <img src="~/CoreBlogTema/images/6.jpg" class="img-fluid" alt="">
-                                    </a>
-                                </div>
-                                <div class="col-md-7 blog-grid-right">
-                                    <h5>
-                                        <a href="single.html">Pellentesque dui, non felis. Maecenas male non felis </a>
-                                    </h5>
-                                    <div class="sub-meta">
-                                        <span>
-                                            <i class="far fa-clock"></i> 20 Feb, 2018
-                                        </span>
-                                    </div>
-                                </div>
-
-                            </div>
-                        </div>
                         <div class="single-gd my-5 tech-btm">
                             <h4>Our Progress</h4>
                             <div class="progress">
