--- a/CoreDemo/Views/Comment/PartialAddComment.cshtml
+++ b/CoreDemo/Views/Comment/PartialAddComment.cshtml
@@ -1,14 +1,13 @@
 ﻿<div class="comment-top">
     <h4>Bir Yorum Yazın</h4>
     <div class="comment-bottom">
-        <form action="#" method="post">
-            <input class="form-control" type="text" name="Name" placeholder="Name" required="">
-            <input class="form-control" type="email" name="Email" placeholder="Email" required="">
+        <form action="/Comment/PartialAddComment/" method="post">
 
-            <input class="form-control" type="text" name="Subject" placeholder="Subject" required="">
+            <input class="form-control" type="text" name="CommentUserName" placeholder="Adınız Soyadınız" required="">
+            <input class="form-control" type="text" name="CommentTitle" placeholder="Konu" required="">
+            <textarea class="form-control" name="Message" placeholder="Yorumunuz..." required=""></textarea>
 
-            <textarea class="form-control" name="Message" placeholder="Message..." required=""></textarea>
-            <button type="submit" class="btn btn-primary submit">Submit</button>
+            <button type="submit" class="btn btn-primary submit">Yorum Yap</button>
         </form>
     </div>
 </div>
