--- a/CoreDemo/Views/Blog/BlogReadAll.cshtml
+++ b/CoreDemo/Views/Blog/BlogReadAll.cshtml
@@ -73,6 +73,8 @@
                         <div class="tech-btm">
                             <img src="~/CoreBlogTema/images/banner1.jpg" class="img-fluid" alt="">
                         </div>
+                        <h4>Mail Bültenine abone olun</h4>
+
                         @await Html.PartialAsync("~/Views/NewsLetter/SubscribeMail.cshtml")
                         @await Component.InvokeAsync("CategoryList")
                         @await Component.InvokeAsync("WriterLastBlog")
