CategoryName Dropdown has been completed

--- a/CoreDemo/Views/Blog/BlogListByWriter.cshtml
+++ b/CoreDemo/Views/Blog/BlogListByWriter.cshtml
@@ -19,7 +19,7 @@
     {
 
         <tr>
-            <td>@item.BlogID</td>
+            <th>@item.BlogID</th>
             <td>@item.BlogTitle</td>
             <td>@item.BlogCreateDate</td>
             <td>@item.CategoryID</td>
@@ -32,4 +32,4 @@
 
 </table>
 
-<a href="#" class="btn btn-primary"></a>
+<a href="#" class="btn btn-primary"> Yeni Blog Oluştur</a>
