--- a/CoreDemo/Views/Blog/BlogAdd.cshtml
+++ b/CoreDemo/Views/Blog/BlogAdd.cshtml
@@ -11,27 +11,27 @@
 {
 
     @Html.Label("Blog Başlığı")
-    @Html.TextBoxFor(x => x.BlogTitle, new { @class = "form-kontrol" })
+    @Html.TextBoxFor(x => x.BlogTitle, new { @class = "form-control" })
     @Html.ValidationMessageFor(x => x.BlogTitle)
     <br />
 
     @Html.Label("Blog Görseli")
-    @Html.TextBoxFor(x => x.BlogImage, new { @class = "form-kontrol" })
+    @Html.TextBoxFor(x => x.BlogImage, new { @class = "form-control" })
     @Html.ValidationMessageFor(x => x.BlogImage)
     <br />
 
     @Html.Label("Blog Küçük Görsel")
-    @Html.TextBoxFor(x => x.BlogThumbnailImage, new { @class = "form-kontrol" })
+    @Html.TextBoxFor(x => x.BlogThumbnailImage, new { @class = "form-control" })
     @Html.ValidationMessageFor(x => x.BlogThumbnailImage)
     <br />
 
     @Html.Label("Kategori")
-    @Html.TextBoxFor(x => x.BlogImage, new { @class = "form-kontrol" })
-    @Html.ValidationMessageFor(x => x.BlogImage)
+    @Html.DropDownListFor(x => x.CategoryID,(List<SelectListItem>)ViewBag.cv, new { @class = "form-control" })
+  
     <br />
 
     @Html.Label("Blog İçeriği")
-    @Html.TextAreaFor(x => x.BlogContent, 15, 3, new { @class = "form-kontrol" })
+    @Html.TextAreaFor(x => x.BlogContent, 15, 3, new { @class = "form-control" })
     @Html.ValidationMessageFor(x => x.BlogContent)
     <br />
     <button class="btn btn-info">Yazıyı Kaydet</button>
