--- a/CoreDemo/Views/Blog/BlogListByWriter.cshtml
+++ b/CoreDemo/Views/Blog/BlogListByWriter.cshtml
@@ -11,8 +11,11 @@
     <tr>
         <th>#</th>
         <th>Blog Başlığı</th>
-        <th>Kategori</th>
+        <th>Oluşturulmas Tarihi</th>
+        <th>Kategori</th>      
         <th>Durum</th>
+        <th>Sil</th>
+        <th>Düzenle</th>
     </tr>
 
     @foreach (var item in Model)
@@ -21,15 +24,14 @@
         <tr>
             <th>@item.BlogID</th>
             <td>@item.BlogTitle</td>
-            <td>@item.BlogCreateDate</td>
-            <td>@item.CategoryID</td>
+            <td> @(((DateTime) item.BlogCreateDate).ToString("dd-MMMM-yyyy"))</td>
+            <td>@item.Category.CategoryName</td>
             <td>@item.BlogStatus</td>
-            <td><a href="#" class="btn btn-danger">Sil</a></td>
-            <td><a href="#" class="btn btn-warning">Düzenle></a></td>
+            <td><a href="/Blog/DeleteBlog/@item.BlogID" class="btn btn-danger">Sil</a></td>
+            <td><a href="/Blog/EditBlog/@item.BlogID" class="btn btn-warning">Düzenle</a></td>
         </tr>
 
     }
-
 </table>
 
-<a href="#" class="btn btn-primary"> Yeni Blog Oluştur</a>
+<a href="/Blog/BlogAdd/" class="btn btn-primary"> Yeni Blog Oluştur</a>
