--- a/CoreDemo/Views/Shared/UserLayout.cshtml
+++ b/CoreDemo/Views/Shared/UserLayout.cshtml
@@ -32,7 +32,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 <body>
     <!--Header-->
-
     <header>
         <div class="top-bar_sub_w3layouts container-fluid">
             <div class="row">
@@ -77,6 +76,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
     </header>
 
+    @RenderBody()
 
 
     @await Html.PartialAsync("Partial3")
