--- a/CoreDemo/Views/Writer/WriterAdd.cshtml
+++ b/CoreDemo/Views/Writer/WriterAdd.cshtml
@@ -1,11 +1,10 @@
-﻿@model EntityLayer.Concrete.Writer
+﻿@model CoreDemo.Models.AddProfileImage
 @{
-    ViewData["Title"] = "WriterEditProfile";
+    ViewData["Title"] = "WriterAdd";
     Layout = "~/Views/Shared/WriterLayout.cshtml";
 }
 
-@using (Html.BeginForm("WriterEditProfile", "Writer", FormMethod.Post))
-{
+<form class="form-group" method="post" enctype="multipart/form-data">
     <div class="col-12 grid-margin stretch-card">
         <div class="card">
             <div class="card-body">
@@ -13,7 +12,7 @@
                 <br />
                 @Html.HiddenFor(x => x.WriterID, new { @class = "form-control" })
 
-                <form class="forms-sample">
+                <div class="forms-sample">
                     <div class="form-group">
                         <label for="exampleInputName1">İsim</label>
                         @Html.TextBoxFor(x => x.WriterName, new { @class = "form-control" })
@@ -34,13 +33,7 @@
                     </div>
                     <div class="form-group">
                         <label>Yazar Görsel</label>
-                        <input type="file" name="img[]" class="file-upload-default">
-                        <div class="input-group col-xs-12">
-                            <input type="text" class="form-control file-upload-info" disabled placeholder="Upload Image">
-                            <span class="input-group-append">
-                                <button class="file-upload-browse btn btn-gradient-primary" type="button">Resim Seç</button>
-                            </span>
-                        </div>
+                        <input type="file" name="WriterImage"/>
                     </div>
                     <div class="form-group">
                         <label for="exampleTextarea1">Yazar Hakkında</label>
@@ -50,9 +43,9 @@
                     </div>
                     <button type="submit" class="btn btn-gradient-primary mr-2">Gönder</button>
                     <button class="btn btn-light">İptal</button>
-                </form>
+                </div>
             </div>
         </div>
     </div>
-    
-}
+
+</form>
