--- a/CoreDemo/Views/Writer/WriterNavbarPartial.cshtml
+++ b/CoreDemo/Views/Writer/WriterNavbarPartial.cshtml
@@ -15,20 +15,20 @@
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="../../index.html">
+            <a class="nav-link" href="/Dashboard/Index/">
                 <span class="menu-title">Dashboard</span>
                 <i class="mdi mdi-home menu-icon"></i>
             </a>
         </li>
 
         <li class="nav-item">
-            <a class="nav-link" href="../../pages/icons/mdi.html">
+            <a class="nav-link" href="/Writer/WriterEditProfile/">
                 <span class="menu-title">Profilim</span>
                 <i class="mdi mdi-contacts menu-icon"></i>
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/Blog/BlogListByWriter">
+            <a class="nav-link" href="/Blog/BlogListByWriter/">
                 <span class="menu-title">Bloglarım</span>
                 <i class="mdi mdi-format-list-bulleted menu-icon"></i>
             </a>
@@ -40,27 +40,27 @@
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="../../pages/tables/basic-table.html">
+            <a class="nav-link" href="/Writer/WriterMessage">
                 <span class="menu-title">Mesajlar</span>
                 <i class="mdi mdi-message menu-icon"></i>
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" data-toggle="collapse" href="#general-pages" aria-expanded="false" aria-controls="general-pages">
+            <a class="nav-link" data-toggle="collapse" href="/Blog/Index/" aria-expanded="false" aria-controls="general-pages">
                 <span class="menu-title">Siteye Git</span>
                 <i class="menu-arrow"></i>
                 <i class="mdi mdi-car menu-icon"></i>
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" data-toggle="collapse" href="#general-pages" aria-expanded="false" aria-controls="general-pages">
+            <a class="nav-link" href="/Writer/WriterEditProfile/" >
                 <span class="menu-title">Ayarlar</span>
                 <i class="menu-arrow"></i>
                 <i class="mdi mdi-settings menu-icon"></i>
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" data-toggle="collapse" href="#general-pages" aria-expanded="false" aria-controls="general-pages">
+            <a class="nav-link" data-toggle="collapse" href="/Login/WriterLogOut/" aria-expanded="false" aria-controls="general-pages">
                 <span class="menu-title">Çışış Yap</span>
                 <i class="menu-arrow"></i>
                 <i class="mdi mdi-logout menu-icon"></i>
