--- a/CoreDemo/Views/Writer/WriterNavbarPartial.cshtml
+++ b/CoreDemo/Views/Writer/WriterNavbarPartial.cshtml
@@ -40,9 +40,15 @@
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/Writer/WriterMessage">
+            <a class="nav-link" href="/Writer/WriterMessage/">
                 <span class="menu-title">Mesajlar</span>
                 <i class="mdi mdi-message menu-icon"></i>
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/Notification/AllNotification/">
+                <span class="menu-title">Bildirimler</span>
+                <i class="mdi mdi-notification-clear-all menu-icon"></i>
             </a>
         </li>
         <li class="nav-item">
@@ -53,7 +59,7 @@
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/Writer/WriterEditProfile/" >
+            <a class="nav-link" href="/Writer/WriterEditProfile/">
                 <span class="menu-title">Ayarlar</span>
                 <i class="menu-arrow"></i>
                 <i class="mdi mdi-settings menu-icon"></i>
