--- a/CoreDemo/Areas/Admin/Views/Category/Index.cshtml
+++ b/CoreDemo/Areas/Admin/Views/Category/Index.cshtml
@@ -1,5 +1,7 @@
 ﻿@using EntityLayer.Concrete
-@model List<Category>
+@using X.PagedList
+@using X.PagedList.Mvc.Core
+@model IPagedList<EntityLayer.Concrete.Category>
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/AdminLayout.cshtml";
@@ -26,4 +28,5 @@
         </tr>
     }
 </table>
-
+<br />
+@Html.PagedListPager((IPagedList)Model,page=>Url.Action("Index", new { page }))
