Category Page and New Category has been completed.

--- a/CoreDemo/Views/Blog/BlogAdd.cshtml
+++ b/CoreDemo/Views/Blog/BlogAdd.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/WriterLayout.cshtml";
 }
 
-<h1>BlogAdd</h1>
+<h1>Blog Ekle</h1>
 
 @using (Html.BeginForm("BlogAdd", "Blog", FormMethod.Post))
 {
