--- a/CoreDemo/Areas/Admin/Views/Category/Index.cshtml
+++ b/CoreDemo/Areas/Admin/Views/Category/Index.cshtml
@@ -28,5 +28,6 @@
         </tr>
     }
 </table>
+<a href="/Admin/Category/AddCategory/" class="btn btn-primary">Yeni Kategori</a>
 <br />
 @Html.PagedListPager((IPagedList)Model,page=>Url.Action("Index", new { page }))
