AddCategory fixed and completed

--- a/CoreDemo/Areas/Admin/Views/Category/AddCategory.cshtml
+++ b/CoreDemo/Areas/Admin/Views/Category/AddCategory.cshtml
@@ -15,7 +15,7 @@
     <br />
 
     @Html.Label("Kategori Açıklaması")
-    @Html.TextAreaFor(x => x.CategoryDescription,15,3, new { @class = "form-control" })
+    @Html.TextAreaFor(x => x.CategoryDescription, 15, 3, new { @class = "form-control" })
     @Html.ValidationMessageFor(x => x.CategoryDescription)
     <br />
 
