--- a/CoreDemo/Areas/Admin/Views/Category/Index.cshtml
+++ b/CoreDemo/Areas/Admin/Views/Category/Index.cshtml
@@ -22,7 +22,8 @@
         <tr>
             <td>@item.CategoryId</td>
             <td>@item.CategoryName</td>
-            <td><a href="#" class="btn btn-danger">Pasif Yap</a></td>
+            <td><a href="/Admin/Category/CategoryDelete/@item.CategoryId/" id="DeleteBtn"
+                   onclick="return confirm('Silmek istediinize emin misiniz ?');" class="btn btn-danger">Pasif Yap</a></td>
             <td><a href="#" class="btn btn-warning">Aktif Yap</a></td>
             <td><a href="#" class="btn btn-success">Düzenle</a></td>
         </tr>
