--- a/CoreDemo/Areas/Admin/Views/Chart/Index.cshtml
+++ b/CoreDemo/Areas/Admin/Views/Chart/Index.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/AdminLayout.cshtml";
 }
-
+@*Error*@
 <div class="row">
     <div class="col-lg-12">
         <div id="chartdiv" style="width:800px; height:600px">
