--- a/CoreDemo/Views/Shared/AdminLayout.cshtml
+++ b/CoreDemo/Views/Shared/AdminLayout.cshtml
@@ -209,6 +209,7 @@
                 radioClass: 'iradio_square-green',
             });
         });</script>
+    @await RenderSectionAsync("scripts")
 
 </body>
 
