--- a/CoreDemo/Areas/Admin/Views/Writer/Index.cshtml
+++ b/CoreDemo/Areas/Admin/Views/Writer/Index.cshtml
@@ -8,10 +8,20 @@
 <br />
 
 <button type="button" id="btngetlist" class="btn btn-outline-primary">Yazar Listesi </button>
+<button type="button" id="btngetbyid" class="btn btn-outline-success">Yazr Getir </button>
 <br />
 <br />
 <div id="writerlist">
     Buraya yazarlar gelecek
+</div>
+<br />
+<div id="writerget">
+    Buraya 1 yazar gelecek
+</div>
+<br />
+
+<div>
+    <input type="text" id="writerid" placeholder="Yazar ID Değerini Giriniz" class="form-control" />
 </div>
 @section scripts{
     <script>
@@ -22,9 +32,20 @@
                 type: "Get",
                 url: "/Admin/Writer/WriterList/",
                 success: function (func) {
-                    console.log(func);
+                    let w = jQuery.parseJSON(func);
+                    console.log(w);
+                    let tablehtml = "<table class='table table-bordered'> <tr> <th> Yazar ID </th> <th>Yazar Adı</th> </tr>";
+                    $.each(w, (index, value) => {
+                        tablehtml += ` <tr><td>${value.Id}</td> <td>${value.Name}</td><tr> `
+                    });
+                    tablehtml += "</table>";
+                    $("#writerlist").html(tablehtml);
                 }
             });
         });
+        $("#btngetbyid").click(x => {
+            let id = ("#writerid").val();
+            console.log(id);
+        })
     </script>
 }
