--- a/CoreDemo/Areas/Admin/Views/Writer/Index.cshtml
+++ b/CoreDemo/Areas/Admin/Views/Writer/Index.cshtml
@@ -8,7 +8,7 @@
 <br />
 
 <button type="button" id="btngetlist" class="btn btn-outline-primary">Yazar Listesi </button>
-<button type="button" id="btngetbyid" class="btn btn-outline-success">Yazr Getir </button>
+<button type="button" id="btngetbyid" class="btn btn-outline-success">Yazar Getir </button>
 <br />
 <br />
 <div id="writerlist">
@@ -44,8 +44,19 @@
             });
         });
         $("#btngetbyid").click(x => {
-            let id = ("#writerid").val();
-            console.log(id);
-        })
+            let id = $("#writerid").val();
+            $.ajax({
+                contentType: "application/json",
+                dataType: "json",
+                type: "get",
+                url: "/Admin/Writer/GetWriterByID/",
+                data: { writerid: id },
+                success: function (func) {
+                    let w = jQuery.parseJSON(func);
+                    console.log(w);
+
+                }
+            });
+        });
     </script>
 }
