Static data deletion complete with Ajax

--- a/CoreDemo/Areas/Admin/Views/Writer/Index.cshtml
+++ b/CoreDemo/Areas/Admin/Views/Writer/Index.cshtml
@@ -9,6 +9,8 @@
 
 <button type="button" id="btngetlist" class="btn btn-outline-primary">Yazar Listesi </button>
 <button type="button" id="btngetbyid" class="btn btn-outline-success">Yazar Getir </button>
+<button type="button" id="btnaddwriter" class="btn btn-outline-info">Yazar Ekle </button>
+<button type="button" id="btndeletewriter" class="btn btn-outline-danger">Yazar Sil </button>
 <br />
 <br />
 <div id="writerlist">
@@ -22,6 +24,16 @@
 <div>
     <input type="text" id="writerid" placeholder="Yazar ID Değerini Giriniz" class="form-control" />
 </div>
+<br />
+
+<div>
+    <input type="text" class="form-control" id="txtwriterid" placeholder=" Yazar ID" />
+    <input type="text" class="form-control" id="txtwritername" placeholder=" Yazar Adı" />
+</div>
+<div>
+    <input type="text" class="form-control" id="txtid" placeholder=" Silinceke Yazar ID" />
+</div>
+
 @section scripts{
     <script>
         $("#btngetlist").click(function () {
@@ -55,9 +67,36 @@
                     console.log(w);
 
                     let getValue = `<table class=table table-bordered> <tr> <th> Yazar ID </th>
-                    <th> Yazar Adı</th></tr>   <tr><td>${w.Id}</td> <td>${w.Name}</td></table>`;
+                            <th> Yazar Adı</th></tr>   <tr><td>${w.Id}</td> <td>${w.Name}</td></table>`;
                     $("#writerget").html(getValue);
 
+                }
+            });
+        });
+        $("#btnaddwriter").click(function () {
+            let writer = {
+                Id: $("#txtwriterid").val(),
+                Name: $("#txtwritername").val()
+            };
+            $.ajax({
+                type: "post",
+                url: "/Admin/Writer/AddWriter/",
+                data: writer,
+                success: function (func) {
+                    let result = jQuery.parseJSON(func);
+                    alert("Yazar Ekleme İşlemi Başarılı Bir Şekilde Gerçekleşti");
+                }
+
+            });
+        });
+        $("#btndeletewriter").click(x => {
+            let id = $('#txtid').val();
+            $.ajax({
+                url: "/Admin/Writer/DeleteWriter/" + id,
+                type: "post",
+                dataType: "json",
+                success: function (func) {
+                    alert("Yazar Silme İşlemi Başarılı Bir Şekilde Gerçekleşti");
                 }
             });
         });
