The deletion and editing process with the api is complete. But the deletion is not happening.

--- a/CoreDemo/Views/EmployeeTest/Index.cshtml
+++ b/CoreDemo/Views/EmployeeTest/Index.cshtml
@@ -17,8 +17,8 @@
         <tr>
             <td>@item.Id</td>
             <td>@item.Name</td>
-            <td><a href="#" class="btn btn-outline-danger">Sil</a></td>
-            <td><a href="#" class="btn btn-outline-success">Düzenle</a></td>
+            <td><a href="/EmployeeTest/DeleteEmployee/@item.Id" class="btn btn-outline-danger">Sil</a></td>
+            <td><a href="/EmployeeTest/EditEmployee/@item.Id" class="btn btn-outline-success">Düzenle</a></td>
         </tr>
 
     }
