--- a/CoreDemo/Views/RegisterUser/Index.cshtml
+++ b/CoreDemo/Views/RegisterUser/Index.cshtml
@@ -11,7 +11,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>INSPINIA | Register</title>
+    <title>Kayıt Ekranı</title>
 
     <link href="~/inspinia-gh-pages/css/bootstrap.min.css" rel="stylesheet">
     <link href="~/inspinia-gh-pages/font-awesome/css/font-awesome.css" rel="stylesheet">
@@ -27,30 +27,52 @@
         <div>
             <div>
 
-                <h1 class="logo-name">IN+</h1>
+                <h2 class="logo-name">Kayıt Ol+</h2>
 
             </div>
-            <h3>Register to IN+</h3>
-            <p>Create account to see it in action.</p>
-            <form class="m-t" role="form" action="login.html">
+            <h4>Kayıt Ekranı+</h4>
+            <p>Yeni bir hesap oluşturun.</p>
+            <form class="m-t" role="form" asp-action="Index">
                 <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Name" required="">
+                    <span asp-validation-for="@Model.NameSurname" class="text-danger"></span>
+                    <input type="text" class="form-control" asp-for="@Model.NameSurname" placeholder="Adınız Soyadınız">
                 </div>
-                <div class="form-group">
-                    <input type="email" class="form-control" placeholder="Email" required="">
-                </div>
-                <div class="form-group">
-                    <input type="password" class="form-control" placeholder="Password" required="">
-                </div>
-                <div class="form-group">
-                    <div class="checkbox i-checks"><label> <input type="checkbox"><i></i> Agree the terms and policy </label></div>
-                </div>
-                <button type="submit" class="btn btn-primary block full-width m-b">Register</button>
 
-                <p class="text-muted text-center"><small>Already have an account?</small></p>
-                <a class="btn btn-sm btn-white btn-block" href="login.html">Login</a>
+                <div class="form-group">
+                    <span asp-validation-for="@Model.Mail" class="text-danger"></span>
+                    <input type="email" class="form-control" asp-for="@Model.Mail" placeholder="Email">
+                </div>
+
+                <div class="form-group">
+                    <span asp-validation-for="@Model.UserName" class="text-danger"></span>
+                    <input type="text" class="form-control" asp-for="@Model.UserName" placeholder="Kullanıcı Adınız">
+                </div>
+
+
+                <div class="form-group">
+                    <span asp-validation-for="@Model.Password" class="text-danger"></span>
+                    <input type="password" class="form-control" asp-for="@Model.Password" placeholder="Şifre" required="">
+                </div>
+
+                <div class="form-group">
+                    <span asp-validation-for="@Model.ConfirmPassword" class="text-danger"></span>
+                    <input type="password" class="form-control" asp-for="@Model.ConfirmPassword" placeholder="Şifre Tekrar" required="">
+                </div>
+
+
+                <div class="form-group">
+                    <div class="checkbox i-checks"><label> <input type="checkbox"><i></i> Hizmet şartlarını okudum ve kabul ettim. </label></div>
+                </div>
+
+                <button type="submit" class="btn btn-primary block  full-width m-b">Kayıt Ol</button>
+
+                <p class="text-muted text-center"><small>Bir hesabınız var mı?</small></p>
+                <a class="btn btn-sm btn-white btn-block" href="/RegisterUserController/Login/">Giriş Yap</a>
+
+                <div class="text-danger" asp-validation-summary="ModelOnly"></div>
             </form>
-            <p class="m-t"> <small>Inspinia we app framework base on Bootstrap 3 &copy; 2014</small> </p>
+            <p class="m-t"> <small>Asp.Net Core 5.0 Proje Kampı | Tüm Hakları Saklıdır. &copy; @DateTime.Now.Year</small> </p>
+
         </div>
     </div>
 
@@ -59,8 +81,9 @@
     <script src="~/inspinia-gh-pages/js/popper.min.js"></script>
     <script src="~/inspinia-gh-pages/js/bootstrap.js"></script>
     <!-- iCheck -->
-    <script src="js/plugins/iCheck/icheck.min.js"></script>
-    <script>$(document).ready(function(){
+    <script src="~/inspinia-gh-pages/js/plugins/iCheck/icheck.min.js"></script>
+    <script>
+        $(document).ready(function () {
             $('.i-checks').iCheck({
                 checkboxClass: 'icheckbox_square-green',
                 radioClass: 'iradio_square-green',
@@ -69,4 +92,3 @@
 </body>
 
 </html>
-body>
