--- a/CoreDemo/Views/Login/Index.cshtml
+++ b/CoreDemo/Views/Login/Index.cshtml
@@ -22,7 +22,7 @@
                         <label class="form-check-label" for="exampleCheck1">Beni Hatırla</label>
                     </div>
                     <button type="submit" class="btn btn-primary submit mb-4">Giriş Yap</button>
-                    <p><a href="/Register/Index/">Bir  hesabın yokmu?</a></p>
+                    <p><a href="/RegisterUser/Index/">Bir  hesabın yokmu?</a></p>
                 </form>
             </div>
         </div>
