--- a/CoreDemo/Views/RegisterUser/Index.cshtml
+++ b/CoreDemo/Views/RegisterUser/Index.cshtml
@@ -67,7 +67,7 @@
                 <button type="submit" class="btn btn-primary block  full-width m-b">Kayıt Ol</button>
 
                 <p class="text-muted text-center"><small>Bir hesabınız var mı?</small></p>
-                <a class="btn btn-sm btn-white btn-block" href="/RegisterUserController/Login/">Giriş Yap</a>
+                <a class="btn btn-sm btn-white btn-block" href="/Login/Index/">Giriş Yap</a>
 
                 <div class="text-danger" asp-validation-summary="ModelOnly"></div>
             </form>
