Password update process complete with identity

--- a/CoreDemo/Views/Writer/WriterNavbarPartial.cshtml
+++ b/CoreDemo/Views/Writer/WriterNavbarPartial.cshtml
@@ -66,8 +66,8 @@
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" data-toggle="collapse" href="/Login/WriterLogOut/" aria-expanded="false" aria-controls="general-pages">
-                <span class="menu-title">Çışış Yap</span>
+            <a class="nav-link" data-toggle="collapse" href="/Login/LogOut/" aria-expanded="false" aria-controls="general-pages">
+                <span class="menu-title">Çıkış Yap</span>
                 <i class="menu-arrow"></i>
                 <i class="mdi mdi-logout menu-icon"></i>
             </a>
