--- a/CoreDemo/Views/Writer/WriterEditProfile.cshtml
+++ b/CoreDemo/Views/Writer/WriterEditProfile.cshtml
@@ -1,65 +1,52 @@
-﻿@model EntityLayer.Concrete.AppUser
+﻿@model UserUpdateViewModel
 @{
     ViewData["Title"] = "WriterEditProfile";
     Layout = "~/Views/Shared/WriterLayout.cshtml";
 }
 
-@using (Html.BeginForm("WriterEditProfile", "Writer", FormMethod.Post))
-{
-    <div class="col-12 grid-margin stretch-card">
-        <div class="card">
-            <div class="card-body">
-                <h4 class="card-title">Yazar Profil Bilgileri Düzenleme</h4>
-                <br />
-                @Html.HiddenFor(x => x.Id, new { @class = "form-control" })
 
-            <form class="forms-sample">
+<div class="col-12 grid-margin stretch-card">
+    <div class="card">
+        <div class="card-body">
+            <h4 class="card-title">Yazar Profil Bilgileri Düzenleme</h4>
+            <br />
+
+            <form class="forms-sample" method="post">
                 <div class="form-group">
                     <label for="exampleInputName1">İsim</label>
-                    @Html.TextBoxFor(x => x.NameSurname, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(x => x.NameSurname, "", new { @class = "text-danger" })
-
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputEmail3">Mail Adresi </label>
-                    @Html.TextBoxFor(x => x.Email, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(x => x.Email, "", new { @class = "text-danger" })
-
+                    <input type="text" asp-for="@Model.namesurname" class="form-control" />
+                    @Html.ValidationMessageFor(x => x.namesurname, "", new { @class = "text-danger" })
                 </div>
 
                 <div class="form-group">
                     <label for="exampleInputEmail3">Kullanıcı Adı </label>
-                    @Html.TextBoxFor(x => x.UserName, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(x => x.UserName, "", new { @class = "text-danger" })
-
+                    <input type="text" asp-for="@Model.username" class="form-control" />
+                    @Html.ValidationMessageFor(x => x.username, "", new { @class = "text-danger" })
                 </div>
+
                 <div class="form-group">
-                    <label for="exampleInputPassword4">Password</label>
-                    @Html.PasswordFor(x => x.PasswordHash, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(x => x.PasswordHash, "", new { @class = "text-danger" })
-
+                    <label for="exampleInputEmail3">Mail Adresi </label>
+                    <input type="text" asp-for="@Model.mail" class="form-control" />
+                    @Html.ValidationMessageFor(x => x.mail, "", new { @class = "text-danger" })
                 </div>
+
                 <div class="form-group">
-                    <label>Yazar Görsel</label>
-                    <input type="file" name="img[]" class="file-upload-default">
-                    <div class="input-group col-xs-12">
-                        <input type="text" class="form-control file-upload-info" disabled placeholder="Upload Image">
-                        <span class="input-group-append">
-                            <button class="file-upload-browse btn btn-gradient-primary" type="button">Resim Seç</button>
-                        </span>
-                    </div>
+                    <label for="exampleInputEmail3">Yeni Şifreniz </label>
+                    <input type="text" asp-for="@Model.password" class="form-control" />
+                    @Html.ValidationMessageFor(x => x.password, "", new { @class = "text-danger" })
                 </div>
-                @*<div class="form-group">
-                    <label for="exampleTextarea1">Yazar Hakkında</label>
-                    @Html.TextAreaFor(x => x.WriterAbout, 10, 3, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(x => x.WriterAbout, "", new { @class = "text-danger" })
 
-                </div>*@
+                <div class="form-group">
+                    <label for="exampleInputEmail3">Resim Yolu </label>
+                    <input type="text" asp-for="@Model.imgageurl" class="form-control" />
+                    @Html.ValidationMessageFor(x => x.imgageurl, "", new { @class = "text-danger" })
+                </div>
+
+
                 <button type="submit" class="btn btn-gradient-primary mr-2">Gönder</button>
                 <button class="btn btn-light">İptal</button>
             </form>
-            </div>
         </div>
     </div>
-    
-}
+</div>
+
