role editing and deletion completed

--- a/CoreDemo/Views/Admin/AdminNavbarPartial.cshtml
+++ b/CoreDemo/Views/Admin/AdminNavbarPartial.cshtml
@@ -49,6 +49,9 @@
             </li>
             <li>
                 <a href="/Admin/Writer/Index/"><i class="fa fa-user"></i> <span class="nav-label">Yazarlar</span>  </a>
+            </li> 
+            <li>
+                <a href="/Admin/AdminRole/Index/"><i class="fa fa-person"></i> <span class="nav-label">Roller</span>  </a>
             </li>
             <li>
                 <a href="/Admin/Chart/Index/"><i class="fa fa-info"></i> <span class="nav-label">Ayarlar</span>  </a>
