--- a/CoreDemo/Areas/Admin/Views/AdminRole/AssignRole.cshtml
+++ b/CoreDemo/Areas/Admin/Views/AdminRole/AssignRole.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/AdminLayout.cshtml";
 }
 
-<form>
+<form method="post">
     @for (int i = 0; i < Model.Count; i++)
     {
         <div class="form-check">
@@ -15,5 +15,7 @@
         </div>
     }
     <button class="btn btn-info">Değişiklikleri Kaydet</button>
+    <br />
 </form>
+<br />
 <a href="/Admin/AdminRole/UserRoleList/" class="btn btn-primary">Kullanıcı Listesine Döne</a>
