--- a/CoreDemo/Views/Admin/AdminNavbarPartial.cshtml
+++ b/CoreDemo/Views/Admin/AdminNavbarPartial.cshtml
@@ -5,15 +5,14 @@
                 <div class="dropdown profile-element">
                     <img alt="image" class="rounded-circle" src="~/inspinia-gh-pages/img/profile_small.jpg" />
                     <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-                        <span class="block m-t-xs font-bold">Berkan Çelik (Static)</span>
-                        <span class="text-muted text-xs block">Yazılım Geliştiricisi(Static) <b class="caret"></b></span>
+                        <span class="block m-t-xs font-bold">@ViewBag.v1</span>
                     </a>
                     <ul class="dropdown-menu animated fadeInRight m-t-xs">
                         <li><a class="dropdown-item" href="profile.html">Profile</a></li>
                         <li><a class="dropdown-item" href="contacts.html">Contacts</a></li>
                         <li><a class="dropdown-item" href="mailbox.html">Mailbox</a></li>
                         <li class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="login.html">Logout</a></li>
+                        <li><a class="dropdown-item" href="/Admin/Blog/Index/">Logout</a></li>
                     </ul>
                 </div>
                 <div class="logo-element">
