--- a/CoreDemo/Views/RegisterUser/Index.cshtml
+++ b/CoreDemo/Views/RegisterUser/Index.cshtml
@@ -27,7 +27,7 @@
         <div>
             <div>
 
-                <h2 class="logo-name">Kayıt Ol+</h2>
+                <h2 class="logo-name">Kayıt+</h2>
 
             </div>
             <h4>Kayıt Ekranı+</h4>
