--- a/CoreDemo/Views/Shared/Partial3.cshtml
+++ b/CoreDemo/Views/Shared/Partial3.cshtml
@@ -32,23 +32,26 @@
                             </a>
                         </li>
                         <li>
-                            <a class="facebook" href="#">
+                            <a class="facebook" href="https://twitter.com/Berkancelik_Dev">
                                 <i class="fab fa-twitter"></i>
                                 <span>Twitter</span>
                             </a>
                         </li>
-                        <li class="mx-3">
-                            <a class="facebook" href="#">
-                                <i class="fab fa-google-plus-g"></i>
-                                <span>Google+</span>
+                        <li>
+                            <a class="facebook" href="https://www.linkedin.com/in/berkancelik/">
+                                <i class="fab fa-linkedin"></i>
+                                <span>Linkedin</span>
                             </a>
                         </li>
                         <li>
-                            <a class="facebook" href="#">
-                                <i class="fab fa-pinterest-p"></i>
-                                <span>Pinterest</span>
+                            <a class="facebook" href="https://www.instagram.com/berkancelik0/">
+                                <i class="fab fa-instagram"></i>
+                                <span>Instagram</span>
                             </a>
                         </li>
+
+
+
                     </ul>
 
                 </div>
