--- a/CoreDemo/Views/Writer/WriterNavbarPartial.cshtml
+++ b/CoreDemo/Views/Writer/WriterNavbarPartial.cshtml
@@ -1,4 +1,6 @@
-﻿<nav class="sidebar sidebar-offcanvas" id="sidebar">
+﻿
+
+<nav class="sidebar sidebar-offcanvas" id="sidebar">
     <ul class="nav">
         <li class="nav-item nav-profile">
             <a href="#" class="nav-link">
@@ -8,8 +10,7 @@
                     <!--change to offline or busy as needed-->
                 </div>
                 <div class="nav-profile-text d-flex flex-column">
-                    <span class="font-weight-bold mb-2">Berkan Çelik (Static)</span>
-                    <span class="text-secondary text-small">Back End Developer (Static)</span>
+                    <span class="font-weight-bold mb-2">Kullanıcı : @ViewBag.v1</span>
                 </div>
                 <i class="mdi mdi-bookmark-check text-success nav-profile-badge"></i>
             </a>
