Some Refactoring and fixed

--- a/CoreDemo/Views/Shared/Components/CategoryListDashboard/Default.cshtml
+++ b/CoreDemo/Views/Shared/Components/CategoryListDashboard/Default.cshtml
@@ -21,7 +21,7 @@
 
                            
                             <tr>
-                                <td> @item.CategoryId </td>
+                                <td> @item.CategoryID </td>
                                 <td> @item.CategoryName </td>
                                 <td> @item.CategoryStatus </td>
                                 <td>
