--- a/CoreDemo/Views/Category/Index.cshtml
+++ b/CoreDemo/Views/Category/Index.cshtml
@@ -17,7 +17,7 @@
     @foreach (var item in Model)
     {
         <tr>
-            <td>@item.CategoryId</td>
+            <td>@item.CategoryID</td>
             <td>@item.CategoryName</td>
             <td>@item.CategoryStatus</td>
             <td>@item.CategoryDescription</td>
